updated violin plots

--- a/src/evaluation/Untitled.ipynb
+++ b/src/evaluation/Untitled.ipynb
@@ -219,8 +219,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "eb0fc6a0-3e6c-4b06-932a-032589098d58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temp=62\n",
+      "pml_pix = 62\n",
+      "0 270\n"
+     ]
+    }
+   ],
+   "source": [
+    "bottom_pml = -1.68\n",
+    "top_pml = 1.68\n",
+    "\n",
+    "def get_fr_slice(value):\n",
+    "\n",
+    "    # put value on a (0 to pm.cell_z) scale - meep defines the cell on a (-cell_z/2 to cell_z/2) scale\n",
+    "    #value = pm.fr_center\n",
+    "    #value = value + pm.cell_z / 2 \n",
+    "    value = value + (4.92 / 2)\n",
+    "\n",
+    "    # length of the cell in microns \n",
+    "    cell_min = 0  # um\n",
+    "    #cell_max = pm.cell_z  # um\n",
+    "    cell_max = 4.92\n",
+    "\n",
+    "    # length of the cell in pixels\n",
+    "    pix_min = 0   \n",
+    "    #pix_max = data['eps_data'].squeeze().shape[2]\n",
+    "    pix_max = 395\n",
+    "\n",
+    "    #pix_max = data['near_fields_1550']['ex'].squeeze().shape[2]\n",
+    "    temp = int(((value - cell_min) / (cell_max - cell_min)) * (pix_max - pix_min) + pix_min)\n",
+    "    print(f'temp={temp}')\n",
+    "    #pml_pix = (data['eps_data'].squeeze().shape[2] - data['near_fields_1550']['ex'].squeeze().shape[2]) // 2\n",
+    "    pml_pix = (395 - 270) // 2\n",
+    "    print(f'pml_pix = {pml_pix}')\n",
+    "    return temp - pml_pix\n",
+    "\n",
+    "bottom_pix = get_fr_slice(bottom_pml)\n",
+    "#top_pix = get_fr_slice(top_pml)\n",
+    "print(bottom_pix, top_pix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c503306-a97a-4fbe-9228-c075a8cd4c89",
    "metadata": {},
    "outputs": [],
    "source": []
