working on resim pipeline

--- a/src/evaluation/evaluation.ipynb
+++ b/src/evaluation/evaluation.ipynb
@@ -78,8 +78,47 @@
     "l_string = r'($\\alpha$' + \" \" + r'$\\gamma$' + \" \" + r'$\\delta$)'\n",
     "title = l_string + f\": ({single_loss['alpha']} {single_loss['delta']} {single_loss['gamma']}) \" + \"\\n\" + single_loss['title'].replace(path_results,\"\").replace(\"/\",\"\") + \" lr=\" + str(single_loss['lr'])\n",
     "\n",
-    "# plt.close(\"all\")\n",
+    "plt.close(\"all\")\n",
     "\n",
+    "\n",
+    "def plot_loss(loss_0, loss_1, loss_2, title, save_fig=False):\n",
+    "    \n",
+    "    plt.style.use(\"ggplot\")\n",
+    "    \n",
+    "    fig, ax = plt.subplots(2, int((len(loss_0.keys()) - 1)/2), figsize = (12, 4.5))\n",
+    "        \n",
+    "    lterms = ['Total Loss', 'Near Field Loss', 'Phase Loss', 'Curvature Loss'] # near field: alpha, phase: gamma, derivs: delta\n",
+    "    \n",
+    "    for i, name in zip(loss_0.keys(), loss_1.keys(), loss_2.keys()):\n",
+    "        \n",
+    "        if(name == \"epoch\"):\n",
+    "            continue\n",
+    "\n",
+    "        if(name.startswith('val')):\n",
+    "            #fig.suptitle(f\"\\nLoss Analysis {title}: \" + \"Valid Dataset\", fontsize=fontsize, fontproperties=font)\n",
+    "            x_vals, y_vals = get_valid_vals('phase', loss_0)\n",
+    "            ax[1][i].plot(x_vals, y_vals, color = colors[0], label=title)\n",
+    "            ax[1][i].set_ylabel(\"Loss\", fontsize = fontsize-1)\n",
+    "            ax[1][i].set_xlabel(\"Epoch\", fontsize = fontsize-1)\n",
+    "            ax[1][i].set_title(name,fontsize=fontsize+1)\n",
+    "            ax[1][i].tick_params(axis=\"x\", labelsize=6)\n",
+    "            ax[1][i].tick_params(axis=\"y\", labelsize=6)\n",
+    "            \n",
+    "        else:\n",
+    "            #fig.suptitle(f\"\\nLoss Analysis {title}: \" + \"Train Dataset\", fontsize=fontsize, fontproperties=font)\n",
+    "\n",
+    "            x_vals, y_vals = get_train_vals('phase', loss_0)\n",
+    "            ax[0][i-5].plot(x_vals, y_vals, color = colors[1], label=title)\n",
+    "            ax[0][i-5].set_ylabel(\"Loss\", fontsize = fontsize-1)\n",
+    "            ax[0][i-5].set_xlabel(\"Epoch\", fontsize = fontsize-1)\n",
+    "            ax[0][i-5].set_title(name,fontsize=fontsize+1)\n",
+    "            ax[0][i-5].tick_params(axis=\"x\", labelsize=6)\n",
+    "            ax[0][i-5].tick_params(axis=\"y\", labelsize=6)\n",
+    "            ax[0][i-5].set_ylim([0,100])\n",
+    "            #ax[0][i-5].legend(loc='upper right', fontsize=fontsize)\n",
+    "            #ax[0][i-5].set_ylim([min[i-6],max[i-6]])\n",
+    "            \n",
+    "    fig.suptitle(title)\n",
     "eval.plot_loss(single_loss['loss'], title, save_fig=False)"
    ]
   },
