high res thermo problem killed on marge. trying wopr next

--- a/src/evaluation/evaluation_2.ipynb
+++ b/src/evaluation/evaluation_2.ipynb
@@ -97,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "23ab9148-c950-4dcf-b86e-17eafbb17839",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e559fb93aa724c3cbc0422917ec4b8dc",
+       "model_id": "81d76ba54a59428cbd2696bbf11fef16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,10 +133,11 @@
     "\n",
     "der_folder = os.path.join(path_results, exp_name + \"_1\")\n",
     "der_train_results, der_valid_results = eval.get_results(der_folder, \"encoder.pkl\")\n",
-    "# resim_train_results, resim_valid_results = eval.get_results(folder_name, \"resim.pkl\")\n",
     "\n",
     "recon_folder = os.path.join(path_results, exp_name + \"_2\")\n",
     "recon_train_results, recon_valid_results = eval.get_results(recon_folder, \"recon.pkl\")\n",
+    "\n",
+    "resim_train_results, resim_valid_results = eval.get_results(recon_folder, \"resim.pkl\")\n",
     "\n",
     "plt.close(\"all\")\n",
     "\n",
@@ -232,10 +233,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "b1020641-dcdd-4813-bfb6-6f91e96289c2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "resim.pkl\n",
+      "encoder.pkl\n",
+      "sample_0.pkl\n",
+      "recon.pkl\n",
+      "resim.pkl\n",
+      "encoder.pkl\n",
+      "recon.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "##### get near field truth, recon, and resim values ####\n",
     "\n",
@@ -244,9 +261,42 @@
     "\n",
     "nf_recon_train = resim_train_results['nf_pred']\n",
     "nf_recon_valid = resim_valid_results['nf_pred']\n",
+    "import pickle\n",
+    "def get_nf_resim(folder_name, target):\n",
+    "    \n",
+    "    folder_path = os.path.join(folder_name, target + \"_info\")\n",
+    "    nf_resim = []\n",
+    "    for file in os.listdir(folder_path):\n",
+    "        print(file)\n",
+    "        if \"sample\" in file:\n",
+    "            resim = pickle.load(open(os.path.join(folder_path,file),\"rb\"))\n",
+    "            nf_resim.append(resim['near_fields_1550']['ey'])\n",
+    "    return nf_resim\n",
     "\n",
-    "nf_resim_train = em.get_nf_resim(folder_name, target = 'train')\n",
-    "nf_resim_valid = em.get_nf_resim(folder_name, target = 'valid')"
+    "folder_name = os.path.join(path_results, exp_name + \"_2\")\n",
+    "nf_resim_train = get_nf_resim(folder_name, target = 'train')\n",
+    "nf_resim_valid = get_nf_resim(folder_name, target = 'valid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0ac58826-e413-4c10-88d5-29184231f336",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nf_resim_valid"
    ]
   },
   {
