--- a/src/thermo_problem/confirm_transmission_for3x3.ipynb
+++ b/src/thermo_problem/confirm_transmission_for3x3.ipynb
@@ -276,7 +276,26 @@
     "                                height=height_pillar,\n",
     "                                axis=mp.Vector3(0,0,1),\n",
     "                                center=mp.Vector3(x_list[i], y_list[i], center_pillar),\n",
-    "                                material=mp.Medium(index=n_amorphousSi)))"
+    "                                material=mp.Medium(index=n_amorphousSi)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "35292cd3-199c-4330-8285-8017262573ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.07712845 0.18148884 0.16429774 0.14465851 0.13001893 0.12072568\n",
+      " 0.09872153 0.10021467 0.09904243]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(radii_list)"
    ]
   },
   {
@@ -1138,8 +1157,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a1ea0acc-4dd8-4107-8409-bd577c228e1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9870149083724464, 0.9773055062295207, 0.9262736908693775, 0.9068684624858437, 0.8868362231726779, 0.9188190344826134]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(I_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b9e053e-7869-47ab-88bc-1e1ff42e9799",
    "metadata": {},
    "outputs": [],
    "source": []
