--- a/src/evaluation/data_processing_troubleshooting.ipynb
+++ b/src/evaluation/data_processing_troubleshooting.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "030073fa-35d5-40a4-8b7d-ea671d4409b8",
+   "metadata": {},
+   "source": [
+    "### trying to get preprocessed data pickle files to look like the .pt file we were generating before switching to one sample at a time (this was to overcome kubernetes issues. I ended up using this code in datamodule.py"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "0b0ccfa9-2ba8-4ecd-81aa-d41830e5aeba",
    "metadata": {},
    "outputs": [],
@@ -16,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "1417d817-2379-4af9-9692-efe0fc0d03ac",
    "metadata": {},
    "outputs": [
@@ -26,7 +34,7 @@
        "dict_keys(['all_near_fields', 'radii', 'phases', 'derivatives', 'sim_times'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "ad79ada9-74ba-4ce1-a32b-bce5e28f7884",
    "metadata": {},
    "outputs": [
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "5e44cc1c-3d03-4e9c-8b36-dbeeae2a1e29",
    "metadata": {},
    "outputs": [
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "0eced520-5af3-4b2b-af5a-6c376af7b2aa",
    "metadata": {},
    "outputs": [
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "f7a17995-459a-4548-b368-7c446fcd4a39",
    "metadata": {},
    "outputs": [],
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "96b88f4d-f11a-4987-a099-4b95f3911b21",
    "metadata": {},
    "outputs": [
@@ -149,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "b97d40f3-bb95-4815-98a0-3031a30bb843",
    "metadata": {},
    "outputs": [],
@@ -172,13 +180,13 @@
     "                radii.append(data['radii'])\n",
     "                phases.append(data['phases'])\n",
     "                derivatives.append(data['derivatives'])\n",
-    "                sim_times.append(data['sim_times'])\n",
+    "                #sim_times.append(data['sim_times'])\n",
     "    \n",
     "    data = {'all_near_fields' : nf,    \n",
     "            'radii' : radii, \n",
     "            'phases' : phases,\n",
     "            'derivatives' : derivatives,\n",
-    "            'sim_times' : sim_times,\n",
+    "            #'sim_times' : sim_times,\n",
     "            }\n",
     "    \n",
     "    return data"
@@ -186,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "9386ff17-83c0-4024-ae15-240d727f58f2",
    "metadata": {},
    "outputs": [],
@@ -196,17 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "684cef54-7d59-469d-8e29-2af9317f1374",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['all_near_fields', 'radii', 'phases', 'derivatives', 'sim_times'])"
+       "dict_keys(['all_near_fields', 'radii', 'phases', 'derivatives'])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "911bad10-1771-41bb-a406-ea0ab4fffd9d",
    "metadata": {},
    "outputs": [
@@ -227,7 +235,7 @@
        "list"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "f8b9e452-f339-44eb-8921-50f53a670adc",
    "metadata": {},
    "outputs": [],
@@ -262,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "5fcfc28d-4fa0-4dff-94fe-c25be489ea91",
    "metadata": {},
    "outputs": [],
@@ -276,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "97e80d5a-bd2a-4fb3-82b7-233094e396db",
    "metadata": {},
    "outputs": [
@@ -286,7 +294,7 @@
        "torch.Size([1, 3, 2, 166, 166])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,60 +305,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "d5d16d81-2e30-4516-b07f-ba96420a8e2a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n",
-      "torch.Size([1, 9])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for radius in data['radii']:\n",
     "    new_data['radii'].append(radius.squeeze())\n",
@@ -359,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "id": "4707bea9-172e-4b06-9755-f995f5c88b51",
    "metadata": {},
    "outputs": [
@@ -369,7 +329,7 @@
        "torch.Size([9])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "7c1036ff-42b6-4ef4-bf86-eeb4a4f9e9b6",
    "metadata": {},
    "outputs": [
@@ -390,7 +350,7 @@
        "torch.Size([9])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "id": "ba0c5e5c-940d-40fb-b9e1-8a07a2b8b7a3",
    "metadata": {},
    "outputs": [
@@ -413,7 +373,7 @@
        "torch.Size([1, 6])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,37 +386,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "a21a9ab4-7482-4ba2-b653-0fb365c8509b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for time in data['sim_times']:\n",
-    "    new_data['sim_times'].append(time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "63b82b45-ee50-4a55-8927-31b549788c69",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['all_near_fields', 'radii', 'phases', 'derivatives', 'sim_times'])\n",
-      "dict_keys(['near_fields_1550', 'near_fields_1060', 'near_fields_1300', 'near_fields_1650', 'near_fields_2881'])\n",
-      "<class 'list'>\n",
-      "torch.Size([1, 3, 2, 166, 166])\n",
-      "42\n",
-      "torch.Size([9])\n",
-      "torch.Size([9])\n",
-      "torch.Size([1, 6])\n",
-      "42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(old_pt.keys())\n",
     "print(old_pt['all_near_fields'].keys())\n",
@@ -471,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "id": "317cf3eb-a05a-4bce-98b6-d5828716f93a",
    "metadata": {},
    "outputs": [
@@ -483,7 +416,7 @@
       "dict_keys(['near_fields_1550', 'near_fields_1060', 'near_fields_1300', 'near_fields_1650', 'near_fields_2881'])\n",
       "<class 'list'>\n",
       "torch.Size([1, 3, 2, 166, 166])\n",
-      "41\n",
+      "1446\n",
       "torch.Size([9])\n",
       "torch.Size([9])\n",
       "torch.Size([1, 6])\n",
