--- a/src/evaluation/eval.ipynb
+++ b/src/evaluation/eval.ipynb
@@ -319,21 +319,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9070891-10cc-4261-b4e8-8dbbed8584f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "from torchmetrics import PeakSignalNoiseRatio\n",
-    "psnr = PeakSignalNoiseRatio()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "954156c7-712c-4258-b5c7-ac3c924ad533",
    "metadata": {},
    "outputs": [],
@@ -341,7 +326,7 @@
     "plt.close(\"all\")\n",
     "\n",
     "similarity = True\n",
-    "amplitude_matrix, phase_matrix = build_custom_conf_matrices(resim_train_eval['nf_1550_truth'], resim_train_eval['nf_1550_pred'], \n",
+    "amplitude_matrix, phase_matrix = eval.build_custom_conf_matrices(resim_train_eval['nf_1550_truth'], resim_train_eval['nf_1550_pred'], \n",
     "                                                             resim_train_results['all_near_fields']['near_fields_1550'], idx=1, similarity = similarity, savefig=False)\n",
     "eval.plot_custom_confusion_matrix(amplitude_matrix, phase_matrix, similarity=similarity, savefig=False)"
    ]
@@ -363,7 +348,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#encoder_train, recon_train, encoder_valid, recon_valid, resim_train_eval, resim_valid_eval, resim_train_results, resim_valid_results"
+    "exp_name = \"allOnConstrainPhaseMoreData\" \n",
+    "\n",
+    "loss, encoder_train, recon_train, encoder_valid, recon_valid, resim_train_eval, resim_valid_eval, resim_train_results, resim_valid_results = eval.get_results(exp_name, stage=None, resim=True, resim_index=1, folder_name = exp_name)\n",
+    "eval.plot_loss(loss, loss, loss, loss, \"all on - single stage\")\n",
+    "\n",
+    "plt.close(\"all\")\n",
+    "title = \"single stage - all on\"\n",
+    "eval.regression_plots(title, encoder_train, encoder_valid, save_fig=True)\n",
+    "\n",
+    "plt.close(\"all\")\n",
+    "eval.plot_dft_fields(resim_train_eval['nf_1550_truth'], resim_train_eval['nf_1550_pred'], resim_train_results['all_near_fields']['near_fields_1550'], idx=1, id=\"train\", savefig=True)\n",
+    "eval.plot_dft_fields(resim_valid_eval['nf_1550_truth'], resim_valid_eval['nf_1550_pred'], resim_valid_results['all_near_fields']['near_fields_1550'], idx=1, id=\"valid\", savefig=True)"
    ]
   },
   {
@@ -395,34 +391,6 @@
    "source": [
     "print(resim_valid_eval['phase_pred'].min(), resim_valid_eval['phase_pred'].max())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87fc5534-2bc9-4ad8-8727-f7753915fcd0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sin(-3.845) * np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5649688d-2c00-4c7c-97f2-798bd893ed53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sin(1.5) * np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20838486-4deb-44d4-86d3-3262a7a8e35a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
